# multi-agent-wedding-planner

./: README.md  pyproject.toml
app/: main.py
app/agents/: cordinator.py  flights.py  playlists.py  venues.py
app/mcp/: flights.py
app/services/: google.py
app/tools/: search_web.py
