[project]
name = "weddingplanner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-core>=1.3.2",
    "langchain-mcp-adapters>=0.2.2",
    "langchain[google-genai]>=1.2.15",
    "tavily-python>=0.7.23",
]
